<resources>
    <string name="app_name">HomeForTicket</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="copyright_en">Copyright © 2000-2015 piaoticket.com</string>
    <string name="request_error">网络连接出错,请重试</string>
    <string name="save_button_text">保存</string>
    <string name="share_text">分享</string>
    <string name="search_text">搜索</string>
    <string name="statistics">统计</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="login_title">登录</string>
    <string name="input_username">用户名</string>
    <string name="input_password">密码</string>
    <string name="confirm_button">登录</string>
    <string name="no_input_up">请输入账号和密码</string>
    <string name="username_length_short">您输入的账号长度不足6位</string>
    <string name="password_length_short">您输入的密码长度不足6位</string>
    <string name="username_first_no_char">您输入的账户名首字母不是字母</string>
    <string name="firstpage_tab">首页</string>
    <string name="message_tab">消息</string>
    <string name="buyticket_tab">团票</string>
    <string name="me_tab">我的</string>
    <string name="toast_system_exit">再按一次退出</string>
    <string name="total_income_title">累计收入：</string>
    <string name="income_init_count">0.00</string>
    <string name="current_month_income_title">本月收入（元）</string>
    <string name="income_share_text">亲，赶紧添加商品分享给好友赚钱吧~</string>
    <string name="behalf_buy_title">我要代购</string>
    <string name="store_manage_title">店铺管理</string>
    <string name="order_manage_title">订单管理</string>
    <string name="store_count_title">店铺统计</string>
    <string name="sell_manage_title">分销管理</string>
    <string name="consumer_manage_title">客户管理</string>
    <string name="common_behalf">常用代购</string>
    <string name="store_navigation">店铺产品导航</string>
    <string name="system_message_string">系统消息</string>
    <string name="order_message_string">订单消息</string>
    <string name="current_cost_up">起</string>
    <string name="me_income">收入（元）</string>
    <string name="me_account">我的提现账户</string>
    <string name="help">使用帮助</string>
    <string name="about">关于卖游翁</string>
    <string name="share_to_friend">分享给好友</string>
    <string name="account_bind">绑定</string>
    <string name="account_unbind">未绑定</string>
    <string name="wallet_title">钱包</string>
    <string name="wallet_record">记录</string>
    <string name="wallet_count">账户余额</string>
    <string name="wallet_available_money">可用金额（元）</string>
    <string name="wallet_freeze_money">冻结金额（元）</string>
    <string name="wallet_withholding_money">预提金额（元）</string>
    <string name="wallet_sell_money">销售总额（元）</string>
    <string name="wallet_brought_money">已提总额（元）</string>
    <string name="fetch_money">提现</string>
    <string name="record_title">记录</string>
    <string name="abstract_name">摘要</string>
    <string name="date_name">日期</string>
    <string name="income_name">收支</string>
    <string name="current_money_name">当前余额</string>
    <string name="order_detail">订单细节</string>
    <string name="profile_title">个人信息</string>
    <string name="profile_headimg">我的头像</string>
    <string name="profile_name">个人名称</string>
    <string name="profile_mobile">绑定手机号</string>
    <string name="profile_reset_password">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="bind_mobile_title">电话</string>
    <string name="input_max_num_text">/11</string>
    <string name="input_original_password">请输入原密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="ticket_title">商品详情</string>
    <string name="scenic_city">景区城市:</string>
    <string name="scenic_address">景区地址:</string>
    <string name="ticket_reserve">门票预订</string>
    <string name="scenic_introduce">景区介绍</string>
    <string name="adult_ticket">成人票</string>
    <string name="immediately_buy">立即预订</string>
    <string name="original_price_title">原价￥</string>
    <string name="price_sign">￥</string>
    <string name="commission_title">佣金:</string>
    <string name="choose_first">请先选择票种</string>
    <string name="distribution_manage_title">分销管理</string>
    <string name="distributor_matching_title">分销商分配</string>
    <string name="distributor_name_title">分销商名称</string>
    <string name="distributor_setting_title">分销商设置</string>
    <string name="distributor_order_title">分销商订单</string>
    <string name="distributor_income_title">分销商收入</string>
    <string name="matching_text">分配</string>
    <string name="start_text">启用</string>
    <string name="pause_text">暂停</string>
    <string name="delete_text">删除</string>
    <string name="check_order">查看订单</string>
    <string name="manage_text">管理</string>
    <string name="client_name">客户名称：</string>
    <string name="client_tel">手机号码：</string>
    <string name="isfinish">已完成</string>
    <string name="no_pay">未付款</string>
    <string name="isclosed">已关闭</string>
    <string name="leave_words">留言</string>
    <string name="total_text">共</string>
    <string name="commodity_text">件商品</string>
    <string name="X">X</string>
    <string name="pay_text">付款：￥</string>
    <string name="store_end">的V店</string>
    <string name="store_setting">店铺设置</string>
    <string name="store_share">分享店铺</string>
    <string name="new_text">最新</string>
    <string name="commission_text">佣金</string>
    <string name="commission_start_text">佣金：￥</string>
    <string name="store_name">店铺名称</string>
    <string name="begin_time">开始时间：</string>
    <string name="end_time">结束时间：</string>
    <string name="time_error">您选择的时间有误</string>
    <string name="FAQ">常见问题</string>
    <string name="bind_mobile">如何绑定手机？</string>
    <string name="unread_message_leave_time">未读信息最多保留多长时间？</string>
    <string name="change_password">如何修改账号密码？</string>
    <string name="buy_limit">团购数量有限制吗？</string>
    <string name="other_question">其他问题？</string>
    <string name="function_introduction">功能介绍</string>
    <string name="feedback">意见反馈</string>
    <string name="connect_waiter">联系客服</string>
    <string name="input_feedback">请输入您要反馈的内容...</string>
    <string name="input_your_address">请输入您的联系方式：邮箱或手机号</string>
    <string name="input_length_left">(</string>
    <string name="input_length_right">/1000) 字</string>
    <string name="input_none">您输入的内容为空</string>
    <string name="often_behalf_title">常用代购</string>
    <string name="add_product">添加</string>
    <string name="place_order_title">提交订单</string>
    <string name="single_end">/张</string>
    <string name="buy_notice">预订须知</string>
    <string name="refund_notice">未过期，未消费，随便退！</string>
    <string name="pay_notice">支付成功后，享受入园保障</string>
    <string name="play_date">游玩时间：</string>
    <string name="begin_play_time">演出时间：</string>
    <string name="buy_ticket_count">购买张数：</string>
    <string name="ticket_count">张</string>
    <string name="input_connect_message">请填写联系人信息</string>
    <string name="make_sure_message">请确认联系人姓名与证件上姓名相同，并确保身份证号码填写正确，否则可能无法入园。</string>
    <string name="connect_people">联系人：</string>
    <string name="connect_people_tel">手机号：</string>
    <string name="connect_people_card">身份证：</string>
    <string name="people_seat">演出座位号：</string>
    <string name="add_people">添加</string>
    <string name="user_name">姓名：</string>
    <string name="delete_user">删除</string>
    <string name="message_not_enough">您输入的资料不全，请填全资料</string>
    <string name="input_tel_not_enough">您输入的电话号码不足11位</string>
    <string name="input_card_not_enough">您输入的身份证号码不足18位</string>
    <string name="order_total_cost">订单总价</string>
    <string name="order_total_count">购票数量</string>
    <string name="tickets_enough">提交订单（余票充足）</string>
    <string name="makesure_buy_ticket">确认付款</string>
    <string name="cancel_buy_ticket">取消</string>
    <string name="makesure_pay">订单已经生成，请尽快确认付款！</string>
    <string name="confirm_text">确定</string>
    <string name="already_buy_count">已购张数</string>
    <string name="cancel_order">退款</string>
    <string name="product_title">产品详情</string>
    <string name="ticket_type_name">票种说明</string>
    <string name="cost_name">费用说明</string>
    <string name="exchange_title">兑换方式</string>
    <string name="important_title">重要条款</string>
    <string name="pressed_buy">点击购票</string>
    <string name="client_info_title">客户资料</string>
    <string name="client_name_title">客户名称</string>
    <string name="client_tel_title">客户手机号</string>
    <string name="client_setting_title">设置备注</string>
    <string name="store_setting_title">店铺设置</string>
    <string name="store_setting_headimg">店铺头像</string>
    <string name="store_setting_name">店铺名称</string>
    <string name="store_info">商家简介</string>
    <string name="self_product_setting">自有产品设置</string>
    <string name="order_confirm">订单自动确认收货</string>
    <string name="order_closed">订单自动关闭</string>
    <string name="guarantee_text">担保交易</string>
    <string name="day">天</string>
    <string name="hour">小时</string>
    <string name="already_open">已开启</string>
    <string name="already_closed">未开启</string>
    <string name="upload_headimg_title">上传头像</string>
    <string name="take_photo">拍照</string>
    <string name="take_local">从相册选择</string>
    <string name="fetch_account_title">账户提现</string>
    <string name="bank_card">银行卡</string>
    <string name="money_count">金额（元）</string>
    <string name="get_account_time">预计到账时间:</string>
    <string name="next">下一步</string>
    <string name="bank_card_end">尾号</string>
    <string name="current_remain_count">当前零钱余额</string>
    <string name="unbind_account_title">绑定提现账户</string>
    <string name="bind_bank_card">绑定银行卡</string>
    <string name="bind_zhifubao">绑定支付宝</string>
    <string name="bind_bank_card_notice">请绑定持卡人的银行卡，以免打款失败</string>
    <string name="card_owner">持卡人</string>
    <string name="card_num">银行卡号</string>
    <string name="card_bank">发卡银行</string>
    <string name="input_card_name">请输入持卡人姓名</string>
    <string name="input_card_num">请输入银行卡号</string>
    <string name="input_bank_name">请输入发卡银行</string>
    <string name="captcha">验证码</string>
    <string name="input_captcha">请输入验证码</string>
    <string name="get_captcha">获取</string>
    <string name="bind_account">绑定</string>
    <string name="product_channel_title">店铺产品导航</string>
    <string name="sell_price">门市价：</string>
    <string name="preferential_price">优惠价：</string>
    <string name="store_title">店铺名称</string>
    <string name="store_tel">店铺电话</string>
    <string name="store_address">店铺地址</string>
    <string name="store_des">店铺描述</string>
    <string name="add_product_title">产品添加</string>
    <string name="add_other_product">添加代销产品</string>
    <string name="add_self_prodduct">添加自有产品</string>
    <string name="commit">完成</string>
    <string name="product_name">商品名称：</string>
    <string name="origin_price">原价（￥）：</string>
    <string name="current_price">现价（￥）：</string>
    <string name="commission_price">佣金（￥）：</string>
    <string name="kinds">种类：</string>
    <string name="city">城市：</string>
    <string name="address">地址：</string>
    <string name="product_img">商品图片</string>
    <string name="add_des">商品描述</string>
    <string name="input_product_name">请输入商品名称</string>
    <string name="input_origin_price">请输入商品原价</string>
    <string name="input_current_price">请输入商品现价</string>
    <string name="input_commission_price">请输入商品佣金</string>
    <string name="input_kinds">请输入商品种类</string>
    <string name="input_begin_time">请输入开始时间</string>
    <string name="input_end_time">请输入结束时间</string>
    <string name="input_city">请输入所在城市</string>
    <string name="input_address">请输入具体地址</string>
    <string name="input_product_des">请输入商品描述</string>
    <string name="pay_title">支付页面</string>
    <string name="pay_count">数量</string>
    <string name="pay_total">小计</string>
    <string name="need_pay">需要支付：</string>
    <string name="choose_pay_channel">选择支付方式</string>
    <string name="weixin_pay">微信支付</string>
    <string name="shareto_sinaweibo">新浪微博</string>
    <string name="shareto_weixin">微信</string>
    <string name="shareto_circle">朋友圈</string>
</resources>